now it just selects and then submit when pressing the submit button

--- a/TPP_game/Punishment.html
+++ b/TPP_game/Punishment.html
@@ -216,13 +216,14 @@ $(document).ready(function () {
         // Update the coin stack
         updateCoinStack(value);
 
-        // Submit the form after ensuring the hidden input is updated
-        setTimeout(() => {
-            $('form').submit();
-        }, 100); // Slight delay to ensure value is updated
-
         punishment = value
         console.log(punishment)
+    });
+
+    // Submit button click handler
+    $('#submit-button').on('click', function () {
+        // Submit the form
+        $('form').submit();
     });
 
     // update coin stacks to original state when mouse leaves number area
@@ -264,42 +265,46 @@ $(document).ready(function () {
 
     {{ formfield_errors 'number' }}
 
-<div style='width:45%; height:25vw; margin-left:auto; margin-right:auto; border:0px solid black; position:relative'>
+    <div style='width:45%; height:25vw; margin-left:auto; margin-right:auto; border:0px solid black; position:relative'>
 
-    <img src="" style='width:25%; position:absolute; left:0px' class='dictatorCountry'>
-    <img src="" style='width:25%; position:absolute; right:0px' class='receiverCountry'>
+        <img src="" style='width:25%; position:absolute; left:0px' class='dictatorCountry'>
+        <img src="" style='width:25%; position:absolute; right:0px' class='receiverCountry'>
 
-    <img src="{{ static 'TPP_game/TPtask.png' }}" style='width:27vw; position:absolute; left:20%; top:3vw'>
+        <img src="{{ static 'TPP_game/TPtask.png' }}" style='width:27vw; position:absolute; left:20%; top:3vw'>
 
-    <span class='coinstack coinstackD'>
-    </span>
+        <span class='coinstack coinstackD'>
+        </span>
 
-    <span class='coinstack coinstackR'>
-    </span>
+        <span class='coinstack coinstackR'>
+        </span>
 
-    <span class='coinstack coinstackTP'>
-    </span>
+        <span class='coinstack coinstackTP'>
+        </span>
 
-</div>
-
-<br>
-
-<div style='position:relative;'>
-   <div class="number-row">
-        <div class="number" data-value="0">0</div>
-        <div class="number" data-value="1">1</div>
-        <div class="number" data-value="2">2</div>
-        <div class="number" data-value="3">3</div>
-        <div class="number" data-value="4">4</div>
-        <div class="number" data-value="5">5</div>
-        <div class="number" data-value="6">6</div>
-        <div class="number" data-value="7">7</div>
-        <div class="number" data-value="8">8</div>
-        <div class="number" data-value="9">9</div>
-        <div class="number" data-value="10">10</div>
     </div>
-</div>
-    </form>
+
+    <br>
+
+    <div style='position:relative;'>
+       <div class="number-row">
+            <div class="number" data-value="0">0</div>
+            <div class="number" data-value="1">1</div>
+            <div class="number" data-value="2">2</div>
+            <div class="number" data-value="3">3</div>
+            <div class="number" data-value="4">4</div>
+            <div class="number" data-value="5">5</div>
+            <div class="number" data-value="6">6</div>
+            <div class="number" data-value="7">7</div>
+            <div class="number" data-value="8">8</div>
+            <div class="number" data-value="9">9</div>
+            <div class="number" data-value="10">10</div>
+        </div>
+    </div>
+
+    <div style="display: flex; justify-content: flex-end">
+        <button type="button" id="submit-button">Submit</button>
+    </div>
+</form>
 
 
 {{ endblock }}
