created a country code file and functions to select two different at random to feed to the javasript

--- a/TPP_game/Punishment.html
+++ b/TPP_game/Punishment.html
@@ -153,8 +153,8 @@ $(document).ready(function () {
 
     // country pictures from https://github.com/irixapps/World-Flags/tree/master
     // naming convention: https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
-    receiverCountry = 'ae'
-    dictatorCountry = 'bl'
+    receiverCountry = '{{ receiver_country }}'
+    dictatorCountry = '{{ dictator_country }}'
 
     pun_eff = {{ C.punishment_effectiveness }} // punishment effectiveness
 
