--- a/TPP_game/Results.html
+++ b/TPP_game/Results.html
@@ -4,14 +4,9 @@
 
 {{ block content }}
 
-    <div class="row">
-        <div class="col" style="text-align:center">
-            <button name="punishment_decision" value="0" class="btn btn-primary btn-large">value 0</button>
-        </div>
-        <div class="col" style="text-align:center">
-            <button name="punishment_decision" value="1" class="btn btn-primary btn-large">value 1</button>
-        </div>
-    </div>
+blablabla
+
+{{ next_button }}
 
 
 {{ endblock }}
