changed number to decision_1

--- a/TPP_game/Punishment.html
+++ b/TPP_game/Punishment.html
@@ -318,9 +318,9 @@ $(document).ready(function () {
 
 <form method="post">
     <!-- Add hidden input to store the selected value -->
-    <input type="hidden" name="number" id="selected-number">
+    <input type="hidden" name="decision_1" id="selected-number">
 
-    {{ formfield_errors 'number' }}
+    {{ formfield_errors 'decision_1' }}
 
     <div class='responsive-div'>
 
