--- a/TPP_game/Punishment.html
+++ b/TPP_game/Punishment.html
@@ -223,8 +223,8 @@ $(document).ready(function () {
     $('.receiverCountry').attr('src', 'https://raw.githubusercontent.com/irixapps/World-Flags/refs/heads/master/png1024/' + receiverCountry +'.png');
     $('.dictatorCountry').attr('src', 'https://raw.githubusercontent.com/irixapps/World-Flags/refs/heads/master/png1024/' + dictatorCountry +'.png');
 
-    $('.receiverCountryMap').attr('src', '/static/TPP_game/worldmap/' + receiverCountry +'_map.png');
-    $('.dictatorCountryMap').attr('src', '/static/TPP_game/worldmap/' + dictatorCountry +'_map.png');
+    $('.receiverCountryMap').attr('src', '/static/global/worldmap/' + receiverCountry +'_map.png');
+    $('.dictatorCountryMap').attr('src', '/static/global/worldmap/' + dictatorCountry +'_map.png');
 
     // get maps
     for (let i = 0; i < dictator; i++) {
@@ -326,14 +326,14 @@ $(document).ready(function () {
 
     <div class='container'>
 
-        <img src="" style='width:25%; position:absolute; left:0px' class='dictatorCountry'>
-        <img src="" style='width:25%; position:absolute; right:0px' class='receiverCountry'>
+        <img src="" style='width:50%; position:absolute; right:16vw' class='dictatorCountry'>
+    <img src="" style='width:50%; position:absolute; left:16vw' class='receiverCountry'>
 
-        <img src="" style='width:19%; position:absolute; top:7.2vw; left:-10px' class='dictatorCountryMap'>
-        <img src="" style='width:19%; position:absolute; top:7.2vw; right:-10px' class='receiverCountryMap'>
+    <img src="" style='width:50%; position:absolute; top:7vw; right:22vw' class='dictatorCountryMap'>
+    <img src="" style='width:50%; position:absolute; top:7vw; left:22vw' class='receiverCountryMap'>
 
 
-        <img src = "{{ static 'TPP_game/TPtask.png' }}" style='width:27vw; position:absolute; left:20%; top:3vw'>
+        <img src = "{{ static 'TPP_game/TPtask.png' }}" style='width:27vw; position:absolute; left:-25%; top:3vw'>
 
         <span class='coinstack coinstackD'>
         </span>
